--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: matthew.murgia@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My name is Matthew Murgia and I am a developer that loves to get out of my comfort zone to learn and help others.  I have a background in sustainability and enjoy finding solutions to problems that have the capacity to endure. This is my blog to help explain new concepts for beginners.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://murgia.github.io/D3-blog-post/" # the base hostname & protocol for your site
 github_username:  murgia
 
 # Build settings
@@ -20,4 +20,4 @@ markdown: kramdown
 
 safe: true
 lsi: false
-source: your top-level directory
+source: d3-blog-post
